# cloudquery

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.prerelease.yaml  .goreleaser.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .release-please-manifest.json  .releaserc.json  .vale.ini  .vercelignore  1.sh  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  Dockerfile.test  Makefile  README.md  adding_a_new_resource.md  config.go  config.hcl  config.yaml  example.aws.config.hcl  example.aws.config.yml  example.aws_cis.policy.yml  example.config.yml  example.gcp.config.hcl  example.gcp.config.yml  example.okta.config.yml  generate-projects.sh  go.mod  go.sum  issue_reporting.md  main.go  main_config.hcl  package-lock.json  package.json  (+5 more)
cli/: go.mod  (+12 more)
plugins/source/square/: CHANGELOG.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
plugins/source/square/docs/: _configuration.md  overview.md
plugins/source/square/docs/tables/: README.md  square_invoices.md  square_locations.md  square_refunds.md
plugins/source/square/docs/tables/square/: square_payouts.md
plugins/source/square/plugin/: __init__.py  plugin.py
plugins/source/square/plugin/client/: client.py
plugins/source/square/plugin/oapi/: __init__.py  api.json  loader.py
plugins/source/square/plugin/tables/: __init__.py  bookings.py  disputes.py  invoices.py  locations.py  merchants.py  payments.py  payouts.py  refunds.py
plugins/source/square/testdata/: config.yml
plugins/source/square/tests/plugin/: test_plugin.py
(+26571 files in other folders)
