[project]
name = "cloudquery-square"
version = "1.3.29"
requires-python = ">=3.11"
dependencies = [
    "cloudquery-plugin-sdk>=0.1.54",
    "pyarrow>=15.0.2",
    "squareup==29.0.0.20230720",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
]

[tool.uv]
exclude-newer = "1 week"
